test/files/neg/dbldef.scala
case class test0(x: Int, x: Float)
