test/files/neg/dbldef.check
dbldef.scala:1: error: x is already defined as value x
case class test0(x: Int, x: Float)
                         ^
dbldef.scala:1: error: type mismatch;
 found   : Float
 required: Int
case class test0(x: Int, x: Float)
                 ^
dbldef.scala:1: error: in class test0, multiple overloaded alternatives of x define default arguments
case class test0(x: Int, x: Float)
           ^
three errors found
